[Nina] Adapted API definition.
